load("//build/cue:defs.bzl", "cue_library")

package(default_visibility = ["//src/main/k8s:__subpackages__"])

cue_library(
    name = "base",
    srcs = ["base.cue"],
)

cue_library(
    name = "resource_setup",
    srcs = ["resource_setup.cue"],
    deps = [":base"],
)

cue_library(
    name = "kingdom",
    srcs = ["kingdom.cue"],
    deps = [":base"],
)

cue_library(
    name = "duchy",
    srcs = ["duchy.cue"],
    deps = [":base"],
)

cue_library(
    name = "frontend_simulator",
    srcs = ["frontend_simulator.cue"],
    deps = [":base"],
)

cue_library(
    name = "edp_simulator",
    srcs = ["edp_simulator.cue"],
    deps = [":base"],
)
