package(default_visibility = ["//visibility:public"])

filegroup(
    name = "computations_schema",
    srcs = ["computations.sdl"],
)

filegroup(
    name = "kingdom_schema",
    srcs = ["kingdom.sdl"],
)

filegroup(
    name = "metric_values_schema",
    srcs = ["metric_values.sdl"],
)

filegroup(
    name = "computation_stats_schema",
    srcs = ["computation_stats.sdl"],
)
