# Base images.
load("//src/main/docker:constants.bzl", "DEBIAN_JAVA_11")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")

JAVA = DEBIAN_JAVA_11

download_pkgs(
    name = "packages",
    image_tar = "@debian_bullseye//image",
    packages = [
        "openjdk-11-jre-headless",
    ],
    tags = [
        "manual",
        "no-remote-exec",
        "requires-network",
    ],
)

install_pkgs(
    name = "packages_image",
    image_tar = "@debian_bullseye//image",
    installables_tar = ":packages.tar",
    output_image_name = "packages_image",
    tags = [
        "manual",
        "no-remote-exec",
    ],
)

container_image(
    name = "java_base",
    base = ":packages_image.tar",
    entrypoint = [
        JAVA.bin + "/java",
        "-jar",
    ],
    env = JAVA.env,
    symlinks = {"/usr/bin/java": JAVA.bin + "/java"},
    tags = ["manual"],
)

container_push(
    name = "push_java_base",
    format = "Docker",
    image = ":java_base",
    registry = "gcr.io",
    repository = "ads-open-measurement/java-base",
    tags = ["manual"],
)
