# Remote Build Execution (RBE) images.

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")

download_pkgs(
    name = "packages",
    image_tar = "@rbe_ubuntu_18_04//image",
    packages = [
        "openjdk-11-jdk-headless",
        "swig",
        "tzdata",
    ],
    tags = [
        "manual",
        "no-remote-exec",
        "requires-network",
    ],
)

install_pkgs(
    name = "packages_image",
    image_tar = "@rbe_ubuntu_18_04//image",
    installables_tar = ":packages.tar",
    output_image_name = "packages_image",
    tags = [
        "manual",
        "no-remote-exec",
    ],
)

container_image(
    name = "rbe",
    base = ":packages_image.tar",
    symlinks = {
        # Put gzip in a more common location for rules_docker config.
        "/usr/bin/gzip": "/bin/gzip",
    },
    tags = ["manual"],
)

container_push(
    name = "push_rbe",
    format = "Docker",
    image = ":rbe",
    registry = "gcr.io",
    repository = "ads-open-measurement/rbe",
    tags = ["manual"],
)
