# Remote Build Execution (RBE) images.

load("//src/main/docker:defs.bzl", "container_commit_install_apt_packages")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)

BASE_IMAGE = "@rbe_ubuntu_18_04//image"

container_commit_install_apt_packages(
    name = "install_packages",
    image = BASE_IMAGE,
    packages = [
        "openjdk-11-jdk-headless",
        "swig",
        "tzdata",
    ],
    tags = ["manual"],
)

container_image(
    name = "rbe_image",
    base = BASE_IMAGE,
    layers = [
        ":install_packages",
    ],
    stamp = True,
    symlinks = {
        # Put gzip in a more common location for rules_docker config.
        "/usr/bin/gzip": "/bin/gzip",
    },
    tags = ["manual"],
)

container_push(
    name = "push_rbe_image",
    format = "Docker",
    image = ":rbe_image",
    registry = "gcr.io",
    repository = "ads-open-measurement/rbe",
    tags = ["manual"],
)
