load("//build/cue:defs.bzl", "cue_string_field")

package(default_visibility = [
    "//src/main/k8s:__subpackages__",
    "//src/main/kotlin/org/wfanet/measurement/integration:__subpackages__",
    "//src/test/kotlin/org/wfanet/measurement/integration:__subpackages__",
])

exports_files(["duchy_rpc_config.textproto"])

exports_files(["duchy_id_config.textproto"])

exports_files(["llv2_protocol_config_config.textproto"])

exports_files(["aggregator_protocols_setup_config.textproto"])

exports_files(["non_aggregator_protocols_setup_config.textproto"])

cue_string_field(
    name = "duchy_rpc_config",
    src = "duchy_rpc_config.textproto",
    identifier = "#DuchyInfoConfig",
    package = "k8s",
)

cue_string_field(
    name = "duchy_id_config",
    src = "duchy_id_config.textproto",
    identifier = "#DuchyIdConfig",
    package = "k8s",
)

cue_string_field(
    name = "llv2_protocol_config_config",
    src = "llv2_protocol_config_config.textproto",
    identifier = "#Llv2ProtocolConfigConfig",
    package = "k8s",
)

cue_string_field(
    name = "aggregator_protocols_setup_config",
    src = "aggregator_protocols_setup_config.textproto",
    identifier = "#AggregatorProtocolsSetupConfig",
    package = "k8s",
)

cue_string_field(
    name = "non_aggregator_protocols_setup_config",
    src = "non_aggregator_protocols_setup_config.textproto",
    identifier = "#NonAggregatorProtocolsSetupConfig",
    package = "k8s",
)

filegroup(
    name = "all_configs",
    srcs = glob(["*.textproto"]),
)
